<resources>
    <string name="app_name">DemoNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_patient_details">Patient Details</string>
    <string name="menu_current_rx">Current Rx</string>
    <string name="menu_symptoms">Symptoms</string>
    <string name="menu_draw">Draw</string>
    <string name="menu_notes">Notes</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="treatment_plan">Treatment Plan</string>
    <string name="go_to_symptoms">Go to Symptoms</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>
