<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_patient_details">

    <fragment
        android:id="@+id/nav_patient_details"
        android:name="com.fullstackoasis.demonavigationdrawer.ui.patientdetails.PatientDetailsFragment"
        android:label="@string/menu_patient_details"
        tools:layout="@layout/fragment_patientdetails" >
        <action
            android:id="@+id/action_nav_patient_details_to_nav_current_rx"
            app:destination="@id/nav_current_rx" />
    </fragment>

    <fragment
        android:id="@+id/nav_current_rx"
        android:name="com.fullstackoasis.demonavigationdrawer.ui.currentrx.CurrentRxFragment"
        android:label="@string/menu_current_rx"
        tools:layout="@layout/fragment_currentrx"
        >
        <action
            android:id="@+id/action_nav_current_rx_to_nav_symptoms"
            app:destination="@id/nav_symptoms" />
    </fragment>

    <fragment
        android:id="@+id/nav_symptoms"
        android:name="com.fullstackoasis.demonavigationdrawer.ui.symptoms.SymptomsFragment"
        android:label="@string/menu_symptoms"
        tools:layout="@layout/fragment_symptoms">
        <action
            android:id="@+id/action_nav_symptoms_to_nav_treatment_plan"
            app:destination="@id/nav_treatment_plan" />
    </fragment>

    <fragment
        android:id="@+id/nav_treatment_plan"
        android:name="com.fullstackoasis.demonavigationdrawer.ui.treatmentplan.TreatmentPlanFragment"
        android:label="@string/treatment_plan"
        tools:layout="@layout/fragment_treatment_plan" />
</navigation>